Disable RestoreOnStartupTestChromeOS.PRE_LogInAndVerify

It is failing (see bug)

BUG=694269
TBR=bartfab@chromium.org
NOTRY=true

Review-Url: https://codereview.chromium.org/2706873002
Cr-Commit-Position: refs/heads/master@{#451631}

Former-commit-id: 9259bd788fa814180638cff20b572c769fcd9411